--- a/index.html
+++ b/index.html
@@ -23,14 +23,21 @@
     <div class="intro">
       <img class="master" src="/images/logo-mastercraft.svg">
       <h1>Mastercraft Bamboo Monitor Riser</h1>
-      <p>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
+      <p> A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
       <div class="buttons">
         <div class="button">Back this project</div>
         <div class="button2"> <img src="/images/icon-bookmark.svg"> <p>Bookmark</p></div>
       </div>
       
     </div>
-
+    <div class="prices">
+      <div class="price">
+        <div class="content"><span>$89,914</span><br>of $100,000 backed</div>
+        <div class="content"><span>5,007</span><br> total backers</div>
+        <div class="content"><span>56</span><br> days left</div>
+      </div>
+      <div class="loder"></div>
+    </div>
 
 
 
@@ -43,9 +50,9 @@
   
   
 
-  $89,914 of $100,000 backed
-  5,007 total backers
-  56 days left
+  
+  
+  
 
   About this project
 
