--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
           </div>
 
-        <div class="bambooStand1">
+        <div class="bambooStand1" id="yoo">
           <label>  <input type="radio" name="radio" />
             <article>
               <h3>Black Edition Stand</h3> 
